@@ -21,9 +21,8 @@ Some details on the directories in GemFire layout are mentioned below:
 
  gemfire-shared/src/main/java                   ===> Code shared between GemFire and GemFireXD client.
 
- gemfire-joptsimple/src/main/java               ===> A copy of JOpt Simple adapted for GemFire.
-
- gemfire-json/src/main/java                     ===> A copy of org.json adapted for GemFire.
+ gemfire-util/src/main/java                     ===> Utility classes including copy of JOpt Simple and org.json
+                                                     adapted for GemFire.
 
  gemfire-core/src/main/java                     ===> Core GemFire code.
 
@@ -78,9 +77,9 @@ The GemFireXD layout is divided into separate logical modules namely:
 GemFireXD now builds completely using gradle. Due to the repository layout changes, the older ant builds no longer work (unless someone takes the effort to change them). The new scripts are much simpler, cleaner and way faster than old ant scripts but are still missing a bunch of old targets. Plan is to add them progressively as required.
 
   * Switch to "snappy/master" branch if not on that already. Update the branch to the latest version. Then test the build with: ./gradlew cleanAll && ./gradlew buildAll
-  * Run a GemFireXD junit test: ./gradlew :gemfirexd-tools:junit -Djunit.single='\*\*/BugsTest.class'
-  * Run a GemFireXD dunit test: ./gradlew :gemfirexd-tools:dunit -Ddunit.single='\*\*/BugsDUnit.class'
-  * Run a GemFireXD wan test:   ./gradlew :gemfirexd-tools:wan -Dwan.single='\*\*/GfxdSerialWanDUnit.class'
+  * Run a GemFireXD junit test: ./gradlew :snappy-store:snappydata-store-tools:junit -Djunit.single='\*\*/BugsTest.class'
+  * Run a GemFireXD dunit test: ./gradlew :snappy-store:snappydata-store-tools:dunitTest -Ddunit.single='**/BugsDUnit.class'
+  * Run a GemFireXD wan test:   ./gradlew :snappy-store:snappydata-store-tools:wan -Dwan.single='**/GfxdSerialWanDUnit.class'
 
 Useful build and test targets:
 ```
@@ -113,7 +112,7 @@ Command-line properties:
 
 If the build works fine, then import into Intellij:
   * Update Intellij to the latest version just to be sure. Double check that Gradle plugin is enabled in File->Settings->Plugins.
-  * Select import project, then point to the GemFireXD directory. Use external Gradle import. Add -XX:MaxPermSize=350m to VM options in global Gradle settings. Select defaults, next, next ... finish. Ignore "Gradle location is unknown warning". Ensure that a JDK7 installation has been selected.
+  * Select import project, then point to the GemFireXD directory. Use external Gradle import. Select defaults, next, next ... finish. Ignore "Gradle location is unknown warning". Ensure that a JDK7 installation has been selected.
   * Once import finishes, go to File->Settings->Editor->Code Style->Java. Set the scheme as "Project". Then OK to apply and close it. Next copy codeStyleSettings.xml to .idea directory created by Intellij and then File->Synchronize just to be sure. Check that settings are now applied in File->Settings->Editor->Code Style->Java which should show TabSize, Indent as 2 and continuation indent as 4.
   * If the Gradle tab is not visible immediately, then select it from window list popup at the left-bottom corner of IDE. If you click on that window list icon, then the tabs will appear permanently.
   * Generate GemFireXD required sources by expanding :gemfirexd->Tasks->other. Right click on "generateSources" and run it. The Run item may not be available if indexing is still in progress, so wait for it to finish. This step has to be done only first time, or if ./gradlew clean has been run, or you have made changes to javacc source files.
